k8s/test/test2/3-nginx-80-service.yaml
---
# SERVICE
# kubectl port-forward service/nginx 8081:80 -n titan # Browse to http://localhost:8081
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: titan
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
